solved some Alignment problem.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -124,7 +124,7 @@ html {
 }
 
 .px-6 {
-  padding: 0 6rem;
+  padding: 0 6rem !important;
 }
 
 /***** End Margin & padding Section *****/
@@ -1584,11 +1584,11 @@ li {
 
 .BecomeOurPartner_section_7 {
   .inputContainer {
-    height: 70px;
+    height: 60px;
     input {
       &::placeholder {
         color: #a7a7a7;
-        font-size: 18px;
+        font-size: 16px;
       }
     }
 
